# cusco

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  README.md  dev.sh  relevant-datasets.csv
.github/workflows/: release-pr-open.yml  release-pr-sync.yml
backend/: pyproject.toml
backend/src/cusco/: chat.py  main.py  models.py  overview.py  storage.py
backend/src/cusco/sources/: __init__.py  adc.py  base.py  citius.py  contracts.py  devedores.py  entities.py  gleif.py  iberinform.py  nif.py  prr.py  pt2030.py  ptdata.py  seg_social.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  format.ts  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AdCCard.tsx  ChatPanel.tsx  CompanyOverview.tsx  CompanyProfile.tsx  ContractsList.tsx  CorporateGroupCard.tsx  DebtorStatus.tsx  EUFundingCard.tsx  EntityProfileCard.tsx  EntityReport.tsx  ErrorBoundary.tsx  InsolvencyBadge.tsx  IntelligenceSummary.tsx  LEICard.tsx  MunicipalitiesCard.tsx  Pagination.tsx  SearchBar.tsx  SegSocialCard.tsx  Skeleton.tsx  ToggleSwitch.tsx
frontend/src/hooks/: usePreference.ts
